# fred-pain

./: .bumpversion.cfg  .gitlab-ci.yml  MANIFEST.in  README.rst  dependency_links.txt  requirements.txt  setup.cfg  setup.py  tox.ini
docker/: Dockerfile
docker/ubuntu:bionic/: Dockerfile
docker/ubuntu:xenial/: Dockerfile
fred_pain/: __init__.py  apps.py  corba.py  processors.py  settings.py
fred_pain/locale/cs/LC_MESSAGES/: django.po
fred_pain/tests/: settings.py  test_corba.py  test_processors.py
