[isort]
line_length = 120
known_first_party = fred_pain
default_section = THIRDPARTY

[flake8]
max-line-length = 120
max-complexity = 15

[mypy]
ignore_missing_imports = True
check_untyped_defs = True

[options]
zip_safe = False

[compile_catalog]
domain = django
directory = fred_pain/locale

[pydocstyle]
convention = google
add_select = D204,D213,D400,D401
add_ignore = D105,D106,D107,D212
